# learning_python_project_setup

./: 404.html  CHANGELOG.md  LICENSE  Makefile  README.md  explanation.html  how-to-guides.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  reference.html  tutorials.html
.github/workflows/: lint.yml  orchestrator.yml  pages.yml  release.yml  test.yml
docs/: index.md  reference.md
search/: search_index.json
src/example_app/: service.py
